hyperdb-api-derive/tests/ui/fail/query_scalar_missing_args.rs
use hyperdb_api_derive::query_scalar;

fn main() {
    let _ = query_scalar!(i64); // missing SQL argument
}
